--- a/composeApp/src/androidMain/res/drawable-v24/ic_launcher_foreground.xml
+++ b/composeApp/src/androidMain/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,11 +1,5 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:bottom="20dp"
-        android:end="20dp"
-        android:left="20dp"
-        android:right="20dp"
-        android:start="20dp"
-        android:top="20dp">
+    <item android:gravity="center">
         <bitmap android:src="@mipmap/app_icon" />
     </item>
 </layer-list>
