--- a/composeApp/src/androidMain/res/drawable/ic_launcher_background.xml
+++ b/composeApp/src/androidMain/res/drawable/ic_launcher_background.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
     <path
-        android:fillColor="@color/color.adp_gray"
+        android:fillColor="@color/color.adp_white"
         android:pathData="M0,0h108v108h-108z" />
 </vector>
